# cpp_cmake_template

./: .gitignore  CMakeLists.txt  README.md
src/: helper.cpp  helper.h  main.cpp
